exposed-dao build.gradle.kts cleanup