@@ -33,16 +33,3 @@ publishJar {
         }
     }
 }
-
-tasks.withType(Test::class.java) {
-    jvmArgs = listOf("-XX:MaxPermSize=256m")
-    testLogging {
-        events.addAll(listOf(TestLogEvent.PASSED, TestLogEvent.FAILED, TestLogEvent.SKIPPED))
-        showStandardStreams = true
-        exceptionFormat = TestExceptionFormat.FULL
-    }
-}
-
-val dialect: String by project
-
-setupDialectTest(dialect)
